--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26,py27,py32,py33,py34,pypy,pypy3
 [testenv]
 deps =
   pytest
-  hypothesis-pytest
+  hypothesis
 
 commands =
   {envbindir}/py.test test.py
